--- a/dashmottu.API/appsettings.Development.json
+++ b/dashmottu.API/appsettings.Development.json
@@ -5,6 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "SecretKey": "MinhaChaveSecretaSuperSegura123",
   "ConnectionStrings": {
     "Oracle": "Data Source=(DESCRIPTION=(ADDRESS_LIST=(ADDRESS=(PROTOCOL=TCP)(HOST=oracle.fiap.com.br)(PORT=1521)))(CONNECT_DATA=(SERVER=DEDICATED)(SID=ORCL)));User Id=rm557254;Password=051205;"
 
